# rust-primer

./: .gitignore  Cargo.toml  README.md  README_END.md
01-hello/: hello.md
01-hello/demo/: Cargo.toml
01-hello/exercise/: Cargo.toml
01-hello/solution/: 01-hello-solution.md  Cargo.toml
02-basics/: basics.md
02-basics/demo/: Cargo.toml
02-basics/demo/src/: main.rs  other_source_file.rs
02-basics/exercise/: Cargo.toml
02-basics/exercise/src/: main.rs
02-basics/solution/: Cargo.toml
02-basics/solution/src/: main.rs
03-structs-lifetimes/: structs.md
03-structs-lifetimes/demo/: Cargo.toml
03-structs-lifetimes/demo/src/: main.rs
03-structs-lifetimes/exercise/: Cargo.toml  structs-exercise.md
03-structs-lifetimes/exercise/src/: main.rs
03-structs-lifetimes/solution/: Cargo.toml
03-structs-lifetimes/solution/src/: main.rs
04-generics-traits/: generics.md
04-generics-traits/demo/: Cargo.toml
04-generics-traits/demo/src/: main.rs
04-generics-traits/exercise/: Cargo.toml
04-generics-traits/exercise/src/: main.rs
04-generics-traits/solution/: Cargo.toml
05-match-result/: match-result.md
05-match-result/demo/: Cargo.toml
05-match-result/demo/src/: main.rs
05-match-result/exercise/: Cargo.toml
05-match-result/solution/: Cargo.toml
06-strings/: strings.md
06-strings/demo/: Cargo.toml
07-external-libraries/: external-libraries.md
07-external-libraries/exercise/: Cargo.toml  input-bad.json  input.json
07-external-libraries/solution/: Cargo.toml
08-async/: async.md
09-chat-app/: chat.md
10-production/: evangelise.md
(+12 files in other folders)
